--- a/Clase 7 - CSS Batman/index.html
+++ b/Clase 7 - CSS Batman/index.html
@@ -23,20 +23,20 @@
         <section>
             <h2>DATOS PERSONALES</h2>
             <ul>
-                <li><span>Nombre completo:</span> Bruce Wayne</li>
-                <li><span>Fecha de nacimiento:</span> 01/05/1939</li>
-                <li><span>Lugar de nacimiento:</span> Gotham City</li>
+                <li><span class="datosPersonales">Nombre completo:</span> Bruce Wayne</li>
+                <li><span class="datosPersonales">Fecha de nacimiento:</span> 01/05/1939</li>
+                <li><span class="datosPersonales">Lugar de nacimiento:</span> Gotham City</li>
             </ul>
         </section>
         <section>
             <h2>FORMACION ACADEMICA</h2>
             <article>
-                <span>1956-1961:</span>
+                <span class="fechas">1956-1961:</span>
                 <span>Universidad del espantapajaros</span>
                 <p>Licenciatura en aeronautica</p>
             </article>
             <article>
-                <span>1952-1956:</span>
+                <span class="fechas">1952-1956:</span>
                 <span>Secundario Gotham</span>
                 <p>Bachiller con especializacion en trucos</p>
             </article>
@@ -44,17 +44,17 @@
         <section>
             <h2>EXPERIENCIA LABORAL</h2>
             <article>
-                <span>1975-1985:</span>
+                <span class="fechas">1975-1985:</span>
                 <span>Desocupado</span>
                 <p>Sin trabajo porque se me rompio el batimovil</p>
             </article>
             <article>
-                <span>1965-1975:</span>
+                <span class="fechas">1965-1975:</span>
                 <span>Cazavillanos y demás chusma</span>
                 <p>Atrapé a gatubela, a joker, a Victor Fries lo dejé porque se me congeló la capa</p>
             </article>
             <article>
-                <span>1962-1965:</span>
+                <span class="fechas">1962-1965:</span>
                 <span>Aprendiz de superhéroes</span>
                 <p>Hice pasantía con Superman. Opté por usar mascara porque no pude aprender a peinarme el rulo</p>
             </article>
