--- a/Clase 7 - CSS Batman/index.html
+++ b/Clase 7 - CSS Batman/index.html
@@ -62,9 +62,9 @@
     </main>
 
     <footer>
-        <span>0810-BATMAN</span>
-        <img src="./img/ico_instagram.png" alt="">
-        <img src="./img/ico_linkedin.png" alt="">
+        <p class="title_footer">0810-BATMAN</p>
+        <img class="img_footer" src="./img/ico_instagram.png" alt="">
+        <img class="img_footer" src="./img/ico_linkedin.png" alt="">
     </footer>
 </body>
 
