--- a/Clase 7 - CSS Batman/index.html
+++ b/Clase 7 - CSS Batman/index.html
@@ -55,8 +55,9 @@
             </article>
             <article>
                 <span class="fechas">1962-1965:</span>
-                <span>Aprendiz de superhéroes</span>
-                <p>Hice pasantía con Superman. Opté por usar mascara porque no pude aprender a peinarme el rulo</p>
+                <p>Aprendiz de superhéroes <br>
+                   Hice pasantía con Superman. Opté por usar mascara porque no pude aprender a peinarme el rulo
+                </p>
             </article>
         </section>
     </main>
