--- a/Clase 7 - CSS Batman/index.html
+++ b/Clase 7 - CSS Batman/index.html
@@ -32,32 +32,27 @@
             <h2>FORMACION ACADEMICA</h2>
             <article>
                 <span class="fechas">1956-1961:</span>
-                <span>Universidad del espantapajaros</span>
-                <p>Licenciatura en aeronautica</p>
+                <p>Universidad del espantapajaros<br>Licenciatura en aeronautica</p>
             </article>
             <article>
                 <span class="fechas">1952-1956:</span>
-                <span>Secundario Gotham</span>
-                <p>Bachiller con especializacion en trucos</p>
+                <p>Secundario Gotham<br>Bachiller con especializacion en trucos</p>
             </article>
         </section>
         <section>
             <h2>EXPERIENCIA LABORAL</h2>
             <article>
                 <span class="fechas">1975-1985:</span>
-                <span>Desocupado</span>
-                <p>Sin trabajo porque se me rompio el batimovil</p>
+                <p>Desocupado<br>Sin trabajo porque se me rompio el batimovil</p>
             </article>
             <article>
                 <span class="fechas">1965-1975:</span>
-                <span>Cazavillanos y demás chusma</span>
-                <p>Atrapé a gatubela, a joker, a Victor Fries lo dejé porque se me congeló la capa</p>
+                <p>Cazavillanos y demás chusma <br>Atrapé a gatubela, a joker, a Victor Fries lo dejé porque se me congeló la capa</p>
             </article>
             <article>
                 <span class="fechas">1962-1965:</span>
-                <p>Aprendiz de superhéroes <br>
-                   Hice pasantía con Superman. Opté por usar mascara porque no pude aprender a peinarme el rulo
-                </p>
+                <p>Aprendiz de superhéroes <br>Hice pasantía con Superman. Opté por usar mascara porque no pude aprender a peinarme el rulo</p> 
+                
             </article>
         </section>
     </main>
